# ExpressManagementSystem

./: CMakeLists.txt  DatabaseInit.sql  GlobalAttribute.h  SakunoFunctions.cpp  SakunoFunctions.h  globalAttribute.h  main.cpp  res.qrc
BussinessLogic/: AccountInfo.cpp  AccountInfo.h  OrderInfo.cpp  OrderInfo.h  accountInfo.cpp  accountInfo.h  orderInfo.cpp  orderInfo.h
DataVisit/: DataEntrance.cpp  DataEntrance.h  DatabaseInfo.cpp  DatabaseInfo.h  DatabaseStatus.cpp  DatabaseStatus.h  databaseInfo.cpp  databaseInfo.h  databaseStatus.cpp  databaseStatus.h
VisualWindows/: DatabaseOption.cpp  DatabaseOption.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.oldcpp  LoginDialog.oldh  LoginDialog.ui  PermissionGetDialog.cpp  PermissionGetDialog.h  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  databaseOption.cpp  databaseOption.h  loginDialog.cpp  loginDialog.h  registerDialog.cpp  registerDialog.h
VisualWindows/mainWindows/: MenuForCustomer.cpp  MenuForCustomer.h  MenuForCustomer.ui  MenuForWaiter.cpp  MenuForWaiter.h  MenuForWaiter.ui  ResetPassword.cpp  ResetPassword.h  Settings.cpp  Settings.h  menuForCustomer.cpp  menuForCustomer.h  menuForWaiter.cpp  menuForWaiter.h
VisualWindows/mainWindows/CustomerExtraWindows/: MyExpresses.cpp  MyExpresses.h  MyExpresses.ui
VisualWindows/mainWindows/WaiterExtraWindows/: AccountEdit.cpp  AccountEdit.h  AccountEditWindow.cpp  AccountEditWindow.h  AccountEditWindow.ui  ExpressEdit.cpp  ExpressEdit.h  WaiterExpressEditWindow.cpp  WaiterExpressEditWindow.h  WaiterExpressEditWindow.ui
VisualWindows/userObjects/: CircleProgressBar.cpp  CircleProgressBar.h  ClickableLabel.h  PickupQuickTag.cpp  PickupQuickTag.h
